--- a/AGDPMS/MainPage.xaml
+++ b/AGDPMS/MainPage.xaml
@@ -2,15 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:AGDPMS"
-             xmlns:components="clr-namespace:AGDPMS.Components"
-             xmlns:shared="clr-namespace:AGDPMS.Shared;assembly=AGDPMS.Shared"
              x:Class="AGDPMS.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
-        <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type components:Routes}" />
-        </BlazorWebView.RootComponents>
-    </BlazorWebView>
+    <VerticalStackLayout Padding="24" Spacing="12">
+        <Label Text="AGDPMS"
+               FontSize="28"
+               HorizontalOptions="Center" />
+        <Label Text="Welcome!"
+               FontSize="18"
+               HorizontalOptions="Center" />
+    </VerticalStackLayout>
 
 </ContentPage>
