Add MaterialType.cs and modify query in InventoryDataAccess

--- a/AGDPMS.Web/Components/Inventory/Inventory.razor
+++ b/AGDPMS.Web/Components/Inventory/Inventory.razor
@@ -27,7 +27,7 @@
         <tr>
             <td>@m.Id</td>
             <td>@m.Name</td>
-            <td>@m.Type</td>
+            <td>@m.Type.Name</td>
             <td>@m.Stock</td>
             <td>@m.Weight</td>
             <td>@m.Thickness</td>
