--- a/AGDPMS/Components/_Imports.razor
+++ b/AGDPMS/Components/_Imports.razor
@@ -1,10 +1,9 @@
 ﻿@using System.Net.Http
-@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using AGDPMS
-@using AGDPMS.Components
-@using AGDPMS.Shared
+@using AGDPMS.Shared.Services
+@using AGDPMS.Services
