--- a/AGDPMS.Web/Components/Pages/Home.razor
+++ b/AGDPMS.Web/Components/Pages/Home.razor
@@ -27,6 +27,7 @@
     </AuthorizeView>
     <AuthorizeView Roles="Technician" Context="techContext">
         <a href="/takeoff">Take Off</a>
+        <a href="/pdf-select">PDF</a>
     </AuthorizeView>
 </AuthorizeView>
 
