move models to shared project

--- a/AGDPMS.Web/Components/Account/Pages/AccountList.razor
+++ b/AGDPMS.Web/Components/Account/Pages/AccountList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/accounts"
 @rendermode InteractiveServer
 
+@using AGDPMS.Shared.Models
 @using AGDPMS.Web.Data
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
