--- a/AGDPMS.Web/Components/Account/Pages/AddAccountForm.razor
+++ b/AGDPMS.Web/Components/Account/Pages/AddAccountForm.razor
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
 @using AGDPMS.Web.Data
+@using AGDPMS.Shared.Models
 @using AGDPMS.Shared.Services
 
 @inject UserDataAccess UserDataAccess
