--- a/AGDPMS.Web/Components/Inventory/Inventory.razor
+++ b/AGDPMS.Web/Components/Inventory/Inventory.razor
@@ -1,6 +1,7 @@
 ﻿@page "/inventory"
 @rendermode InteractiveServer
 
+@using AGDPMS.Shared.Models
 @using AGDPMS.Web.Data
 @using System.ComponentModel.DataAnnotations
 
