--- a/AGDPMS.Shared/Components/Account/Pages/NeedChangePassword.razor
+++ b/AGDPMS.Shared/Components/Account/Pages/NeedChangePassword.razor
@@ -3,7 +3,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authorization
-@using AGDPMS.Shared.Components.Layout
+@using AGDPMS.Shared.Components.Account.Layout
 @using AGDPMS.Shared.Services
 
 @attribute [Authorize]
