--- a/AGDPMS.Shared/Components/Account/Pages/ResetPassword.razor
+++ b/AGDPMS.Shared/Components/Account/Pages/ResetPassword.razor
@@ -2,7 +2,7 @@
 @layout AuthLayout
 
 @using System.ComponentModel.DataAnnotations
-@using AGDPMS.Shared.Components.Layout
+@using AGDPMS.Shared.Components.Account.Layout
 @using AGDPMS.Shared.Services
 
 @inject IAuthService Auth
