--- a/AGDPMS.Shared/Components/Account/Pages/VerifyOtp.razor
+++ b/AGDPMS.Shared/Components/Account/Pages/VerifyOtp.razor
@@ -3,7 +3,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using AGDPMS.Shared.Services
-@using AGDPMS.Shared.Components.Layout
+@using AGDPMS.Shared.Components.Account.Layout
 
 @inject IAuthService Auth
 @inject NavigationManager Nav;
