--- a/AGDPMS.Shared/Components/Account/Pages/ResetPassword.razor
+++ b/AGDPMS.Shared/Components/Account/Pages/ResetPassword.razor
@@ -57,7 +57,7 @@
         IsLoading = true;
         var result = await Auth.ResetPasswordWithTokenAsync(Token, Input.Password);
         IsLoading = false;
-        if (result.Success) Nav.NavigateTo("/login");
+        if (result.Success) Nav.NavigateTo("/login", forceLoad: true, replace: true);
         else Message = result.ErrorMessage ?? "Something went wrong";
     }
 
