--- a/AGDPMS.Web/Components/App.razor
+++ b/AGDPMS.Web/Components/App.razor
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="_content/AGDPMS.Shared/app.css" />
     <link rel="stylesheet" href="AGDPMS.Web.styles.css" />
     <link rel="icon" type="image/png" href="_content/AGDPMS.Shared/favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="_defaultRenderMode" />
 </head>
 <body>
     <Routes @rendermode="_defaultRenderMode" />
